<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context="com.madminds.madminds.VistaGlobetrotter.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_senza_sfondo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="10dp" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/iconColor"
        android:text="@string/sign_in"
        android:onClick="login"
        android:textColor="@android:color/white" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/not_having_account"
        android:textColor="#ccc" />

    <Button
        android:id="@+id/btnLoginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/iconColor"
        android:text="@string/register"
        android:onClick="registrazione"
        android:textColor="@android:color/white" />

</LinearLayout>
