<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VistaCicerone.AggiungiFascePrezzo"
    android:background="@color/colorPrimary">

    <Button
        android:id="@+id/addFasciaButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@color/iconColor"
        android:fontFamily="@font/brown_regular"
        android:padding="5dp"
        android:text="@string/inserisci_fascia_attviita"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_attivita" />

    <Button
        android:id="@+id/avantiFasciaButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@color/iconColor"
        android:fontFamily="@font/brown_regular"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:text="@string/avanti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/fascePrezzoAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/brown_regular"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/fasce_prezzo"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_attivita"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/avantiFasciaButton"
        app:layout_constraintTop_toBottomOf="@+id/numMaxUtentiFascia"
        tools:layout_editor_absoluteX="-8dp">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/da"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fascePrezzoAdd" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"

        android:text="@string/uno"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/fascePrezzoAdd" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/a"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/fascePrezzoAdd" />

    <EditText
        android:id="@+id/numMaxUtentiFascia"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:ems="10"
        android:textAlignment="center"
        android:fontFamily="@font/brown_regular"
        android:hint="@string/num"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/fascePrezzoAdd"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/prezzoAttivitaPubblica"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/prezzo"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numMaxUtentiFascia"
        app:layout_constraintTop_toBottomOf="@+id/fascePrezzoAdd"
        tools:targetApi="o" />

</android.support.constraint.ConstraintLayout>