<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context="com.madminds.madminds.VistaGlobetrotter.PrenotaAttivita">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/brown_regular"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/prenotazioneattivita"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brown_regular"
        android:gravity="center"
        android:padding="10dp"
        android:text="Numero di persone per cui si vuole prenotare l'attività:"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/npartecipanti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/inspartecipanti"
        android:inputType="text"
        android:padding="10dp" />



    <Button
        android:id="@+id/btnPrenota"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/iconColor"
        android:text="@string/button_prenotazione"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

</LinearLayout>
